# plugins

dummy/src/: CMakeLists.txt  sim_dummy.cpp  sim_dummy.h  sim_dummy.pro  simtab.cpp  simtab.h  simtab.ui  widtoolbar.cpp  widtoolbar.h  widtoolbar.ui
expcond-dummy/src/: CMakeLists.txt  plugin.cpp  plugin.h  tab.cpp  tab.h
gvle2.experimentalConditions/: CMakeLists.txt
gvle2.experimentalConditions/src/: CMakeLists.txt  plugin.cpp  toolbar.cpp  toolbar.h
gvle2.modeling.differenceEquation/: CMakeLists.txt
gvle2.modeling.differenceEquation/src/: CMakeLists.txt  editclass.ui  editmodel.cpp  editmodel.h  editmodel.ui  editwidget.cpp  editwidget.h  modelerde.cpp  modelerde.h  tabwidget.cpp  tabwidget.h  vlesm.cpp  vlesm.h
gvle2.simu.log/: CMakeLists.txt
gvle2.simu.log/src/sim_log/: CMakeLists.txt  sim_log.cpp  sim_log.h  simtab.cpp  widtoolbar.cpp
gvle2.simulating.log/src/sim_log/: CMakeLists.txt  sim_log.cpp  sim_log.h
gvle2.simulating.plot/: CMakeLists.txt
gvle2.simulating.plot/src/sim_plot/: CMakeLists.txt  sim_plot.cpp  sim_plot.h
gvle2.simulating.shape/src/: shaderwidget.cpp  sim_spacial.cpp  sim_spacial.h  simtab.cpp  simtab.h  simtab.ui  widtoolbar.cpp  widtoolbar.h
modeler-de/: CMakeLists.txt
modeler-de/src/: CMakeLists.txt  CMakeLists.txt~  editmodel.cpp  editmodel.h  editmodel.ui  editwidget.cpp  editwidget.h  modeler-de.pro  modelerde.cpp  modelerde.h  tabwidget.ui
modeler-dummy/: CMakeLists.txt~
modeler-dummy/src/: CMakeLists.txt  dummy_modeler.cpp  dummy_modeler.h  editmodel.cpp  editmodel.h  editmodel.ui  editwidget.cpp  editwidget.h  editwidget.ui  tabwidget.cpp  tabwidget.h
plot/: CMakeLists.txt
plot/cmake/: FindGVLE2.cmake
plot/src/sim_plot/: CMakeLists.txt  sim_plot.cpp  sim_plot.h  thread.cpp
spacial/src/: openglwidget.cpp  sim_spacial.cpp  simtab.cpp
